tests/language_modules/18_string_templates/valid/string_template_no_placeholder.vf
module StringTemplateNoPlaceholder

procedure main()
is
    let message: String = String.template("ready")
    check message = "ready"
end main

end StringTemplateNoPlaceholder