tests/language_modules/18_string_templates/invalid_semantics/string_template_named_todo.vf
module StringTemplateNamedTodo

procedure main()
is
    let id: Integer = 7
    let message: String = String.template("id=${id}", id)
    check message = "id=7"
end main

end StringTemplateNamedTodo